# HW27

./: pyproject.toml
ads/: views.py
ads/migrations/: 0001_initial.py
avito/: settings.py  urls.py
datasets/: csv_to_json.py
